Load-balancer.tf
/*provider "aws" {
  region = "us-east-1"
  shared_credentials_file = "/Users/nilusultanva/.aws/credentials"
  profile = "default"
}
#Application Load Balancer
resource "aws_lb" "test" {
  name               = "test-lb-tf"
  internal           = false
  load_balancer_type = "application"
  #security_groups    = [aws_security_group.lb_sg.id]
  #subnets            = aws_subnet.public.*.id
  enable_deletion_protection = true
  #access_logs {
  # bucket  = aws_s3_bucket.lb_logs.bucket
  #prefix  = "test-lb"
  #enabled = true
  #}
  tags = {
    Environment = "production"
  }
}
*/
